--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest-watch-typeahead": "0.4.2",
     "koa": "^2.11.0",
     "koa-router": "^8.0.8",
+    "left-pad": "^1.3.0",
     "mini-css-extract-plugin": "0.9.0",
     "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
